# sg-archive

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cli.py  config_example.yml  config_example_secret.yml  connection.py  create.bat  download.py  pyproject.toml  requirements.txt  shotgun.py
example/: config_example.yaml  config_example.yml  config_example_secret.yml
src/sg_archive/: __main__.py  cli.py  connection.py  shotgun.py  utils.py
src/sg_archive/html/: main.py
src/sg_archive/html/static/: style.css
src/sg_archive/html/templates/: entities.html  entity.html  footer.html  header.html  index.html  list_entities.html  list_view.html
